k8s/central/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: profile-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: kavi-solutions-central-ip

spec:
  rules:
    - http:
        paths:
          - path: /profiles
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80

          - path: /profile-orders
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: profile-service
                port:
                  number: 80
